--- a/intex.html
+++ b/intex.html
@@ -1,15 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Park Pal</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> 
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 </head>
 <body>
-    <div class="bg">
-        
-    </div>
+  
+  <h1></h1>
+
+  <div class="jumbotron text-center">
+     <h1>Park Pal</h1>
+     <p>Find affordable parking near you</p>
+   </div>
     
+  
+   <div class="container">
+     <div class="row">
+       <div class="col-sm-4">
+         <h3>Distance</h3>
+         <p>Find a parking space near you.</p>
+         <p>Find a parking space where you're going</p>
+       </div>
+       <div class="col-sm-4">
+         <h3>Price</h3>
+         <p>Search parking spaces by price.</p>
+         <p>Find the cheapest parking where you're going</p>
+       </div>
+       <div class="col-sm-4">
+         <h3>Availability</h3>       
+         <p>Search available parking times.</p>
+         <p>Organize to see parking suitable for the length of time you need it.</p>
+       </div>
+     </div>
+   </div>
+
+   <div class="jumbotron text-center">
+        <h2>Search by</h2>
+        <div class="btn-group-center">
+            <button type="button" class="btn btn-default btn-block">Distance</button>
+            <button type="button" class="btn btn-default btn-block">Availability</button>
+            <button type="button" class="btn btn-default btn-block">Price</button>
+        </div>
+   </div>
+
+
+
+  <!-- <button onclick="myFunction()">Click me</button> -->
+
+  <div id="map"></div>
+
+  <script src="script.js"></script>
+
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTwF_hnMhT4da0V7eUXWp_5QvMFg8IAEs&map_ids=MAP_ID&callback=initMap">
+</script>
 </body>
 </html>
