--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
      </div>
    </div>
 
-   <div class="jumbotron text-center">
+   <div class="button">
         <h2>Search by</h2>
-        <div class="btn-group-center">
+        <div class="buttons">
             <button type="button" class="btn btn-default btn-block">Distance</button>
             <button type="button" class="btn btn-default btn-block">Availability</button>
             <button type="button" class="btn btn-default btn-block">Price</button>
