--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Park Pal</title>
+  <title class="parktitle">Park Pal</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="style.css">
@@ -60,11 +60,11 @@
 
 
   <!-- <button onclick="myFunction()">Click me</button> -->
-
   <div style="width: 100%; display: table;">
     <div style="display: table-row">
         <div id="map" style="width: 120vh; display: table-cell;"> Left </div>
-        <div style="display: table-cell;"> Right </div>
+        <div id= "list-container" style="border:1px solid #ccc;font:16px/26px Georgia, Garamond, Serif;overflow:auto;">
+          As you can see, once there's enough text in this box, the box will grow scroll bars... that's why we call it a scroll box! You could also place an image into the scroll box.
     </div>
   </div>
 
