--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 
 </head>
 <body>
@@ -30,7 +31,7 @@
         <h3>Distance</h3>
         <p>Find a parking space near you.</p>
         <p>Find a parking space where you're going</p>
-        <button onClick= type="button" class="btn btn-default">Distance</button>
+        <button onClick= distList() type="button" class="btn btn-default">Distance</button>
         <p> </p>
       </div>
       <div class="col-sm-4">
@@ -41,7 +42,7 @@
         <h3>Price</h3>
         <p>Search parking spaces by price.</p>
         <p>Find the cheapest parking where you're going</p>
-        <button type="button" class="btn btn-default" onclick="store_stuff()">Availability</button>
+        <button onClick= priceList() type="button" class="btn btn-default" onclick="store_stuff()">Price</button>
         <p> </p>
       </div>
       <div class="col-sm-4">
@@ -52,7 +53,7 @@
         <h3>Availability</h3>       
         <p>Search available parking times.</p>
         <p>Organize parking for the length of time you need it.</p>
-        <button type="button" class="btn btn-default">Price</button>
+        <button onClick= timeList() type="button" class="btn btn-default">Availability</button>
         <p> </p>
       </div>
     </div>
@@ -60,11 +61,14 @@
 
 
   <!-- <button onclick="myFunction()">Click me</button> -->
-  <div style="width: 100%; display: table;">
+  <div class="map-border" style="width: 100%; display: table;">
     <div style="display: table-row">
         <div id="map" style="width: 120vh; display: table-cell;"> Left </div>
-        <div id= "list-container" style="border:1px solid #ccc;font:16px/26px Georgia, Garamond, Serif;overflow:auto;">
-          As you can see, once there's enough text in this box, the box will grow scroll bars... that's why we call it a scroll box! You could also place an image into the scroll box.
+        <div id= "list-container" style="border:1px solid rgb(0, 0, 0); ">
+          <div class="default-message">
+            SELECT FILTER ABOVE
+          </div>
+        </div>
     </div>
   </div>
 
