--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </svg>
         <h3>Find Parking</h3>
         <p class="bigger">Find options in my area!</p>
-        <button id="distList" onclick=distList() type="button" class="btn btn-default but">Get Parking</button>
+        <button id="distList" onclick=distList() type="button" class="btn btn-default but">Search!</button>
         <p> </p>
       </div>
       <div class="col-sm-4 middle">
@@ -48,7 +48,7 @@
               <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71V3.5z"/>
               <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0z"/>
             </svg>
-        <h3>Extend Stay</h3>       
+        <h3>Extended Stay</h3>       
         <p class="bigger">I need to stay more than two hours!</p>
         <button id="stay-length" type="button" class="btn btn-default but">Availability</button>
         <p> </p>
