Final final edits

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <div class="topbar">
      <h1 class="parktitle">ParkPal</h1>
-     <p>Find affordable parking near you</p>
+     <p>Find affordable parking near you.</p>
    </div>
     
   
@@ -75,6 +75,7 @@
   <script src="script.js"></script>
 
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTwF_hnMhT4da0V7eUXWp_5QvMFg8IAEs&map_ids=MAP_ID&callback=initMap"></script>
-  <div class="bottom">BCS Hackathon 2022: Project ParkPal</div>
+  <div class="bottom1">Oliver Cowley, Emily Guest, William Gumboc, Colleen Rideout, Harvey Wu</div>
+  <div class="bottom2">BCS Hackathon 2022: Project ParkPal</div>
 </body>
 </html>
