--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
   </div>
 
   <script src="script.js"></script>
-
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAX_JNXd8S4tnFWJHLL-YheJqL-TImYXag&map_ids=MAP_ID&callback=initMap"></script>
+  <!-- CONTAINS GENERIC API KEY HERE FROM THE GOOGLE EXAMPLE -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap"></script>
   <div class="bottom1">Oliver Cowley, Emily Guest, William Gumboc, Colleen Rideout, Harvey Wu</div>
   <div class="bottom2">BCS Hackathon 2022: Project ParkPal</div>
 </body>
